unpackaged/main/default/objects/OrderApi__Receipt__c/OrderApi__Receipt__c.object-meta.xml
<CustomObject>
    <description>Receipts track Customer Payments and Refunds.</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>