unpackaged/main/default/objects/OrderApi__Receipt__c/fields/Legacy_Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Receipt_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Receipt ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>