unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** The account the payment was received from or the refund was sent to.</description>
    <inlineHelpText>**System Calculated/Override/Required** The account the payment was received from or the refund was sent to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>