unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Action_Information__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Action_Information__c</fullName>
    <description>JSON Field that will store action information such as custom links that may need to be displayed.</description>
    <inlineHelpText>JSON Field that will store action information such as custom links that may need to be displayed.</inlineHelpText>
    <label>Action Information</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>