unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Applied_Amount__c</fullName>
    <description>**System Calculated** The total amount of the payment that has been applied to transactions.</description>
    <inlineHelpText>**System Calculated** The total amount of the payment that has been applied to transactions.</inlineHelpText>
    <label>Applied Amount</label>
    <summarizedField>OrderApi__Receipt_Line__c.OrderApi__Total__c</summarizedField>
    <summaryForeignKey>OrderApi__Receipt_Line__c.OrderApi__Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>