unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Balance__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance__c</fullName>
    <description>**System Calculated** The difference between the Payment Amount and the Applied Amount.</description>
    <formula>OrderApi__Total__c - OrderApi__Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** The difference between the Payment Amount and the Applied Amount.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>