unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Batch__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Best Practice** Associate all receipts with a financial batch.</description>
    <inlineHelpText>**Best Practice** Associate all receipts with a financial batch.</inlineHelpText>
    <label>Batch</label>
    <referenceTo>OrderApi__Batch__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>