unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_Contact__c</fullName>
    <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
    <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
    <label>Billing Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>