unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** Link to the related Business Group auto-populates if not specified on record creation based upon the user&#39;s &quot;Default Business Group&quot; setting on the custom settings object.</description>
    <inlineHelpText>**System Calculated/Override/Required** Link to the related Business Group auto-populates if not specified on record creation based upon the user&#39;s &quot;Default Business Group&quot; setting on the custom settings object.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>