unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Calculate_Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Memo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked the system will populate the memo for the receipt making it easy to have helpful memo&#39;s to both customers and accountants.</description>
    <inlineHelpText>When checked the system will populate the memo for the receipt making it easy to have helpful memo&#39;s to both customers and accountants.</inlineHelpText>
    <label>Calculate Memo</label>
    <type>Checkbox</type>
</CustomField>