unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Calculate_Shipping_Details__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&#39;s shipping address is used. The contact on the receipt will populate the shipping contact field.</description>
    <inlineHelpText>If checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&#39;s shipping address is used. The contact on the receipt will populate the shipping contact field.</inlineHelpText>
    <label>Calculate Shipping Details</label>
    <type>Checkbox</type>
</CustomField>