unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** The contact the payment was received from or the refund is being sent to.</description>
    <inlineHelpText>**System Calculated/Override/Required** The contact the payment was received from or the refund is being sent to.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>