unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_Link__c</fullName>
    <description>**System Calculated** A link to the record the system considers the &quot;Customer&quot;  as determined by the &quot;Entity&quot; field.</description>
    <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;), OrderApi__Account__r.Name, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName)</formula>
    <inlineHelpText>**System Calculated** A link to the record the system considers the &quot;Customer&quot;  as determined by the &quot;Entity&quot; field.</inlineHelpText>
    <label>Customer</label>
    <type>Text</type>
</CustomField>