unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>**Required** The Date the Receipt was processed. Default&#39;s to the Date the Entry was created.</description>
    <inlineHelpText>**Required** The Date the Receipt was processed. Default&#39;s to the Date the Entry was created.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>