unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** The GL account associated with the bank account the funds will be deposited into.</description>
    <inlineHelpText>**Required** The GL account associated with the bank account the funds will be deposited into.</inlineHelpText>
    <label>Deposit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>