unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Encrypted_Id__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Encrypted_Id__c</fullName>
    <description>This field shows this record&#39;s encrypted id used for external pages.</description>
    <inlineHelpText>This field shows this record&#39;s encrypted id used for external pages.</inlineHelpText>
    <label>Encrypted Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>