unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>**Required** The entity the system should consider the &quot;Customer&quot; related to the record.</description>
    <inlineHelpText>**Required** The entity the system should consider the &quot;Customer&quot; related to the record.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>