unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__EPayment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** When receipts are created from payment activities the source a link to the source payment activity will populate in this field.</description>
    <inlineHelpText>**System Calculated** When receipts are created from payment activities the source a link to the source payment activity will populate in this field.</inlineHelpText>
    <label>E-Payment (Source)</label>
    <referenceTo>OrderApi__EPayment__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>