unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Gateway_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gateway_Transaction_Id__c</fullName>
    <description>** System Calculated ** The transaction ID reported from your payment gateway. Use this key as a unique key for payment reconciliation between your merchant services provider and our database.</description>
    <inlineHelpText>** System Calculated ** The transaction ID reported from your payment gateway. Use this key as a unique key for payment reconciliation between your merchant services provider and our database.</inlineHelpText>
    <label>Gateway Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>