unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default unchecked. When checked, the receipt will create a new cash transaction (journal entry) and the posted date will populate with the value of today&#39;s date.</description>
    <inlineHelpText>Default unchecked. When checked, the receipts will create a new cash transaction (journal entry) and the posted date will populate with the value of today&#39;s date.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>