unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Memo__c</fullName>
    <description>Customer-facing memo for the receipt.</description>
    <inlineHelpText>Customer-facing memo for the receipt.</inlineHelpText>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>