unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to payment gateway, populates automatically for all epayment transactions.</description>
    <inlineHelpText>Lookup to payment gateway, populates automatically for all epayment transactions.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>