unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use a saved payment method for the customer without having to enter in a new credit card or bank account (not supported for all gateways - check with your administrator to see if you are using a gateway that supports this functionality).</description>
    <inlineHelpText>Use a saved payment method for the customer without having to enter in a new credit card or bank account (not supported for all gateways - check with your administrator to see if you are using a gateway that supports this functionality).</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>