unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Payment_Method_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method_Description__c</fullName>
    <description>** System Calculated ** Derived from the source ePayment.</description>
    <formula>IF (OrderApi__EPayment__c != null,

IF (OrderApi__EPayment__r.OrderApi__Payment_Method_Type__c == &#39;credit_card&#39;,

UPPER(OrderApi__EPayment__r.OrderApi__Card_Type__c) &amp; &quot; **&quot; &amp; OrderApi__EPayment__r.OrderApi__Last_Four_Digits__c &amp; &quot; (&quot; &amp; TEXT(OrderApi__EPayment__r.OrderApi__Month__c) &amp; &quot;/&quot; &amp; TEXT(OrderApi__EPayment__r.OrderApi__Year__c) &amp; &quot;)&quot;,

OrderApi__EPayment__r.OrderApi__Bank_Name__c  &amp; &quot; &quot; &amp; OrderApi__EPayment__r.OrderApi__Bank_Account_Type__c &amp; &quot; &quot; &amp; OrderApi__EPayment__r.OrderApi__Bank_Account_Number__c


),&#39;N/A&#39;)</formula>
    <inlineHelpText>** System Calculated ** Derived from the source ePayment.</inlineHelpText>
    <label>Payment Method Description</label>
    <type>Text</type>
</CustomField>