unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Type__c</fullName>
    <description>**Required** The payment type (Check, Credit Card, EFT, or Other).</description>
    <inlineHelpText>**Required** The payment type (Check, Credit Card, EFT, or Other).</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
                <default>true</default>
                <label>Check</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Account Credit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>