unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posted_Date__c</fullName>
    <description>**System Calculated/Override** Populates with the value of the date the &quot;Is Posted&quot; flag is checked.</description>
    <inlineHelpText>**System Calculated/Override** Populates with the value of the date the &quot;Is Posted&quot; flag is checked.</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>