unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Process_Refund__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Process_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this flag will process the refund.</description>
    <inlineHelpText>Checking this flag will process the refund.</inlineHelpText>
    <label>Process Refund</label>
    <type>Checkbox</type>
</CustomField>