unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Caluclated** Lookup to the reciept for which you are refunding.</description>
    <inlineHelpText>**System Caluclated** Lookup to the reciept for which you are refunding.</inlineHelpText>
    <label>Receipt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OrderApi__Receipt__c.OrderApi__Is_Payment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>