unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Receipt_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the functional Receipt to the reporting Receipt when Fonteva&#39;s multi-currency is enabled.</description>
    <label>Receipt (R)</label>
    <referenceTo>OrderApi__Receipt_R__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>