unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Reference_Number__c</fullName>
    <description>**Required** The check number or credit card/bank authorization code related to the payment.</description>
    <inlineHelpText>**Required** The check number or credit card/bank authorization code related to the payment.</inlineHelpText>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>