unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Refund__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this flag will create a refund record.</description>
    <inlineHelpText>Checking this flag will create a refund record.</inlineHelpText>
    <label>Refund</label>
    <type>Checkbox</type>
</CustomField>