unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
    <description>The value of this field will be updated with the Account&#39;s Shipping Postal Code or Contact&#39;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
    <inlineHelpText>The value of this field will be updated with the Account&#39;s Shipping Postal Code or Contact&#39;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>