unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Source_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Source_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional source code for the receipt. This will populate on all invoices related to the receipt. If a source code is already on an invoice the receipt is applied to, the original source code will not be updated with the value of the source code on the receipt.</description>
    <inlineHelpText>Populates on all invoices related to the receipt. If a source code is already assigned to an invoice the receipt is applied to, the invoice will not be updated with the new source code.</inlineHelpText>
    <label>Source Code</label>
    <referenceTo>OrderApi__Source_Code__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>