unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**Conditionally Required** Receipt Total, required to post receipt to GL (Transactions).</description>
    <inlineHelpText>**Conditionally Required** Receipt Total, required to post receipt to GL (Transactions).</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>