unpackaged/main/default/objects/OrderApi__Receipt__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>**Required/Do Not Modify Picklist Values** &quot;Cash Receipt&quot; receipts are used to record inbound cash such as customer payments. &quot;Cash Payment&quot; receipts are used to record outbound cash such as refunds.</description>
    <inlineHelpText>**Required/Do Not Modify Picklist Values** &quot;Cash Receipt&quot; receipts are used to record inbound cash such as customer payments. &quot;Cash Payment&quot; receipts are used to record outbound cash such as refunds.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>