unpackaged/main/default/objects/OrderApi__Receipt__c/validationRules/Refund_cannot_be_greater_than_payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_cannot_be_greater_than_payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(OrderApi__Type__c,&#39;Refund&#39;), OrderApi__Total__c &gt; OrderApi__Receipt__r.OrderApi__Total__c)</errorConditionFormula>
    <errorMessage>Refund amount cannot be greater than payment</errorMessage>
</ValidationRule>