unpackaged/main/default/objects/OrderApi__Receipt__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Billing_Contact__c</columns>
    <columns>OrderApi__Payment_Type__c</columns>
    <columns>OrderApi__Date__c</columns>
    <columns>OrderApi__Is_Posted__c</columns>
    <columns>OrderApi__Posted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>