unpackaged/main/default/objects/OrderApi__Receipt__c/listViews/Receipts_with_Batches.listView-meta.xml
<ListView>
    <fullName>Receipts_with_Batches</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Batch__c</columns>
    <columns>OrderApi__Deposit_Account__c</columns>
    <columns>OrderApi__Payment_Type__c</columns>
    <columns>OrderApi__Date__c</columns>
    <columns>OrderApi__Is_Posted__c</columns>
    <columns>OrderApi__Posted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Batch__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Receipts with Batches</label>
</ListView>