unpackaged/main/default/objects/OrderApi__Receipt__c/listViews/Receipts_without_Batches.listView-meta.xml
<ListView>
    <fullName>Receipts_without_Batches</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Batch__c</columns>
    <columns>OrderApi__Payment_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Payment_Type__c</field>
        <operation>equals</operation>
        <value>Check,EFT</value>
    </filters>
    <label>Receipts needing Batches</label>
</ListView>