unpackaged/main/default/objects/OrderApi__Receipt__c/listViews/Today_s_Receipts.listView-meta.xml
<ListView>
    <fullName>Today_s_Receipts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&#39;s Receipts</label>
</ListView>